--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -1,21 +1,22 @@
 on: [push]
 
+defaults:
+  run:
+    working-directory: myapp
+
 jobs:
   build:
-    runs-on: ubuntu-latest
     working-directory: myapp
     steps:
-      - uses: actions/checkout@v3
+      - name: checkout
+        uses: actions/checkout@v3
+
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           java-version: '17'
           distribution: 'temurin'
       
-      - name: check repo
-        run: pwd
-      - name: check folders
-        run: ls
       - name: build with Maven
         run: mvn compile
 
