--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -1,16 +1,11 @@
 on: [push]
 
-defaults:
-  run:
-    working-directory: myapp
-
 jobs:
   build:
+    runs-on: ubuntu-latest
     working-directory: myapp
     steps:
-      - name: checkout
-        uses: actions/checkout@v3
-
+      - uses: actions/checkout@v3
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
