--- a/.github/workflows/publish-docker.yml
+++ b/.github/workflows/publish-docker.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Build with Maven
       run: mvn -f myapp/pom.xml clean install
 
-    - run: mkdir staging && cp target/*.jar staging
+    - run: mkdir staging && cp myapp/target/*.jar staging
     - uses: actions/upload-artifact@v3
       with:
         name: Package
