--- a/.github/workflows/publish-docker.yml
+++ b/.github/workflows/publish-docker.yml
@@ -3,7 +3,7 @@ name: Publish Docker Image
 on: [push]
 
 jobs:
-  build:
+  publish:
 
     runs-on: ubuntu-latest
     permissions:
@@ -41,8 +41,8 @@ jobs:
       with:
         images: davnerson/myapp
       
-    # - name: Build and push Docker image
-    #   uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
+    - name: Build and push Docker image
+      uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
     #   with:
     #     context: .
     #     file: ./Dockerfile
