--- a/.github/workflows/publish-docker.yml
+++ b/.github/workflows/publish-docker.yml
@@ -42,6 +42,7 @@ jobs:
         images: davnerson/myapp
       
     - name: Build and push Docker image
+      id: push
       uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
       with:
         context: .
@@ -49,3 +50,6 @@ jobs:
         push: true
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
+    
+    - name: run dockerfile
+      run: docker run davnerson/myapp:feature
