--- a/.github/workflows/publish-docker.yml
+++ b/.github/workflows/publish-docker.yml
@@ -1,6 +1,8 @@
 name: Publish Docker Image
 
-on: [push]
+on:
+  release:
+    [publish]
 
 jobs:
   publish:
@@ -42,7 +44,6 @@ jobs:
         images: davnerson/myapp
       
     - name: Build and push Docker image
-      id: push
       uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
       with:
         context: .
@@ -52,4 +53,4 @@ jobs:
         labels: ${{ steps.meta.outputs.labels }}
     
     - name: run dockerfile
-      run: docker run davnerson/myapp:feature
+      run: docker run davnerson/myapp:${{ github.event.release.tag_name }}
