--- a/.github/workflows/publish-docker.yml
+++ b/.github/workflows/publish-docker.yml
@@ -20,6 +20,13 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
 
+    - name: update version
+      run: update-version.sh
+
+    - name: Get project version
+      id: get_version
+      run: echo ::set-output name=version::$(mvn -f myap/pom.xml help:evaluate -Dexpression=project.version -q -DforceStdout)
+
     - name: Build with Maven
       run: mvn -f myapp/pom.xml clean install --quiet
 
@@ -47,8 +54,8 @@ jobs:
         context: .
         file: ./Dockerfile
         push: true
-        tags: ${{ steps.meta.outputs.tags }}
+        tags: ${{ steps.get_version.outputs.version }}
         labels: ${{ steps.meta.outputs.labels }}
     
     - name: run dockerfile
-      run: docker run davnerson/myapp:latest
+      run: docker run davnerson/myapp:${{ steps.get_version.outputs.version}}
