--- a/.github/workflows/publish-docker.yml
+++ b/.github/workflows/publish-docker.yml
@@ -25,7 +25,7 @@ jobs:
 
     - name: Get project version
       id: get_version
-      run: echo ::set-output name=version::$(mvn -f myapp/pom.xml help:evaluate -Dexpression=project.version -q -DforceStdout)
+      run: echo "version=$(mvn -f myapp/pom.xml help:evaluate -Dexpression=project.version -q -DforceStdout)" >> $GITHUB_STATE
 
     - name: Build with Maven
       run: mvn -f myapp/pom.xml clean install --quiet
